- Added new components - Removed grid plugin

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -121,3 +121,13 @@ body {
 #main-container {
   width: 1020px;
 }
+
+.grid-stack-item.ui-draggable{
+  padding: 10px;
+  border: 1px solid #ddd;
+  margin-bottom: 20px;
+}
+
+.grid-stack-item-content{
+  background: none;
+}
