--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -122,12 +122,6 @@ body {
   width: 1020px;
 }
 
-.grid-stack-item.ui-draggable{
-  padding: 10px;
-  border: 1px solid #ddd;
+.item-wrap {
   margin-bottom: 20px;
-}
-
-.grid-stack-item-content{
-  background: none;
 }
