--- a/app/components/button.html
+++ b/app/components/button.html
@@ -1,1 +1,1 @@
-<button type="button" onclick="alert('Hello world!')">Click Me!</button>
+<button class="btn btn-default" type="submit">Button</button>
