--- a/app/components/select.html
+++ b/app/components/select.html
@@ -1,5 +1,1 @@
-<select>
-  <option value="volvo">Volvo</option>
-  <option value="mercedes">Mercedes</option>
-  <option value="audi">Audi</option>
-</select>
+<select class="form-control"> <option>1</option> <option>2</option> <option>3</option> <option>4</option> <option>5</option> </select>
