--- a/app/components/abc.html
+++ b/app/components/abc.html
@@ -1,3 +1,3 @@
-<div draggable="true" ondragstart="drag(event)" id="id-48" class="item-wrap"><button class="btn btn-primary" type="button">
+<div ondragstart="drag(event)" id="id-48" class="item-wrap"><button class="btn btn-primary" type="button">
   Messages <span class="badge">4</span>
 </button><div></div></div>
